final login page

--- a/Session3/login.html
+++ b/Session3/login.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
 </head>
+
 <body>
     <h1>Login Form</h1>
 
-    
+    <form action="login" method="post" style="background-color: rgb(72, 187, 143);">
+        <br>
+        <label for="userName">Username :</label>
+        <input type="text" name="userName" id="userName" placeholder="Enter your Name"> <br> <br>
+
+        <label for="password">Password :</label>
+        <input type="password" name="password" id="password" placeholder="Enter your Password"> </br> <br>
+
+        <input type="submit" value="login" style="background-color: blue; color: white;">
+
+    </form>
+
 </body>
+
 </html>
