feat: final touch on sound gallary page

--- a/Session4/soundGallary.html
+++ b/Session4/soundGallary.html
@@ -62,12 +62,12 @@
     </nav>
     <br>
 
-    <h1>Welcome To The Sound Gallary</h1>
+    <h1>👋 Welcome To The Sound Gallary 🎶 </h1>
     <br>
+ 
+    <h3 id="musics">*** Bhajan Audios ***</h3>
 
-    <h3> Bhajan Audios</h3>
-
-    <div class="audio-container" id="musics">
+    <div class="audio-container" >
         <audio controls autoplay muted loop>
             <source src="./Sounds/09. Ram Bhajan Kar Man.mp3">
         </audio>
@@ -200,8 +200,8 @@
     <br><br><br>
 
     <hr>
-
-    <div class="video-container" id="videos">
+    <h3 id="videos">*** Katha Videos ***</h3>
+    <div class="video-container" >
 
         <span>
             <iframe width="550" height="309" src="https://www.youtube.com/embed/6iUZ_DKgwqU"
