feat: session6-display

--- a/Session6/padding.html
+++ b/Session6/padding.html
@@ -32,16 +32,18 @@
 
 <body>
 
-    <div class="container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita rerum nisi aspernatur provident minima sunt
-        optio cumque, iusto ullam. Cupiditate deserunt ducimus, illo quibusdam saepe delectus necessitatibus doloribus
-        dignissimos beatae!
-    </div>
-
-    <div class="container1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita rerum nisi aspernatur provident minima sunt
-        optio cumque, iusto ullam. Cupiditate deserunt ducimus, illo quibusdam saepe delectus necessitatibus doloribus
-        dignissimos beatae!
+    <div class="container-body">
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita rerum nisi aspernatur provident minima sunt
+            optio cumque, iusto ullam. Cupiditate deserunt ducimus, illo quibusdam saepe delectus necessitatibus doloribus
+            dignissimos beatae!
+        </div>
+    
+        <div class="container1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita rerum nisi aspernatur provident minima sunt
+            optio cumque, iusto ullam. Cupiditate deserunt ducimus, illo quibusdam saepe delectus necessitatibus doloribus
+            dignissimos beatae!
+        </div>
     </div>
 </body>
 
