feat:session 9-variable ex

--- a/Session9/sample.html
+++ b/Session9/sample.html
@@ -11,10 +11,12 @@
     <script lang="javascript">
         //alert("Welcome to the First JavaScript Class ! ")
         var name = 'Sakshi';
-        var age = '22';
+        var age = 22;
         var city = 'Nagpur';
 
-        document.write('<i> My Name is </i>', name);
+        document.write(typeof(age),"<br>");
+
+        document.write('<i> My Name is </i>', name );
         console.log(age);
         console.log('Your are live in', city)
 
