--- a/Session10/index.html
+++ b/Session10/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--Logical operators-->
+    <script>
+        var condition_greater = 70>8;
+        var condition_less = 67<50;
+
+        document.write(condition_greater && condition_less, "<br>");
+        document.write(condition_greater || condition_less, "<br>");
+        document.write(condition_greater != condition_less, "<br>");
+
+    </script>
 </body>
 </html>
