feat:session10-logical-op

--- a/Session10/index.html
+++ b/Session10/index.html
@@ -11,9 +11,9 @@
         var condition_greater = 70>8;
         var condition_less = 67<50;
 
-        document.write(condition_greater && condition_less, "<br>");
-        document.write(condition_greater || condition_less, "<br>");
-        document.write(condition_greater != condition_less, "<br>");
+        document.write("<b> AND Condition :</b> ", condition_greater && condition_less, "<br>");
+        document.write("<b> OR Condition : </b>",  condition_greater || condition_less, "<br>");
+        document.write("<b> NOT Condition :</b> ", condition_greater != condition_less, "<br>");
 
     </script>
 </body>
