feat:task3,task4

--- a/Session11/task4-even.html
+++ b/Session11/task4-even.html
@@ -8,14 +8,14 @@
 </head>
 
 <body>
-    <h1>Print first 50 odd numbers</h1>
+    <h1>Print first 50 even numbers</h1>
     <script>
 
         var x = prompt("Enter Number");
         var i = 0;
 
         while (true) {
-           if(i%2!==0){
+           if(i%2==0){
                 document.write("Number: "+i+"<br>");
                 
             }
