feat: Session13_string.html_name

--- a/Session13/string.html
+++ b/Session13/string.html
@@ -9,7 +9,10 @@
 
 <body>
     <script>
-        document.write(`that\'s, use \\ `);
+        let name ="Sakshi Rahangdale"
+        document.write(`that\'s, use \\ <br/>`);
+        document.write(`Name:  ${name}`);
+
 
     </script>
 </body>
