--- a/Session14/stringMethods.html
+++ b/Session14/stringMethods.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>session 14</title>
+    <title>Session 14</title>
 </head>
+
 <body>
     <script>
-        let name="Sakshi Rahangdale";
-        document.write("length: ",name.length,"<br/>");
+        let name = "Sakshi Rahangdale";
+        document.write("length: ", name.length, "<br/>");
 
-        let slice= name.slice(3,8);
-        document.write("Slice: ",slice,"<br/>");
+        let slice = name.slice(3, 8);
+        document.write("Slice: ", slice, "<br/>");
 
-        let str1="Hello, How are you !";
-        let str2= str1.substr(5,12);
-        document.write("Substring: ",str2,"<br/>");
+        let str1 = "Hello, How are you !";
+        let str2 = str1.substr(5, 12);
+        document.write("Substring: ", str2, "<br/>");
 
-        let replace= str1.replace("How","Who");
-        document.write("Replace: ",replace,"<br/>");
+        let replace = str1.replace("How", "Who");
+        document.write("Replace: ", replace, "<br/>");
 
+        let name_str = name.toUpperCase();
+        document.write("Uppercase: ", name_str, "<br/>");
+
+        let name1 = "MUKESH PIMPALKAR";
+        let name_str1 = name1.toLowerCase();
+        document.write("Uppercase: ", name_str1, "<br/>");
+
+        let end = name1.endsWith("PIMPALKAR");
+        document.write("endsWith: ", end, "<br/>");
+
+        let start = name1.startsWith("PIMPALKAR");
+        document.write("endsWith: ", start, "<br/>");
+
+        let string = name.charAt(4);
+        document.write("charAt: ", string, "<br/>");
 
     </script>
 </body>
+
 </html>
