feat: session14_task1

--- a/Session14/stringMethods.html
+++ b/Session14/stringMethods.html
@@ -38,6 +38,8 @@
         let string = name.charAt(4);
         document.write("charAt: ", string, "<br/>");
 
+        let index = name1.indexOf("PIMPALKAR");
+        document.write("endsWith: ", index, "<br/>");
     </script>
 </body>
 
