--- a/Session14/task2.html
+++ b/Session14/task2.html
@@ -3,26 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tast 2</title>
+    <title>task 2</title>
 </head>
 <body>
-    <script>
-        let fullName = prompt("Enter Fullname :");
 
-        let name = prompt("Enter Full Name");//Nikunj Soni
+    <script>
+        let name = prompt("Enter Fullname");//Nikunj Soni
 
         //remove extra space and breaks using " "
         let names= name.trim().split(" ");
-
         console.log(names);
          //names is an array with 2 values
-         //names[0]== first name saved==Sakshi
-         //names[1]== last name saved==Rahangdale
+         //names[0]== first name saved==Nikunj
+         //names[1]== last name saved==Soni
 
         let result =names[0].charAt(0).toUpperCase()+names[0].slice(1)
         +" "+names[1].charAt(0).toUpperCase();
 
-        document.write(`Fullname: ${result}`)
+        document.write("Fullname: ",result);
+
+
+
     </script>
+    
 </body>
 </html>
