--- a/Session15/Calculator/index.html
+++ b/Session15/Calculator/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Calculator</title>
 </head>
 
 <body>
-    <h1>Calculator Session </h1>
     <div class="calculator">
-        <h2>Calculator</h2>
+        <h2>#Sakshi</h2>
         <input type="text" id="result" readonly>
         <div class="buttons">
             <button onclick="appendnumber('7')">7</button>
