feat:calculator js page

--- a/Session15/Calculator/index.html
+++ b/Session15/Calculator/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="calculator">
-        <h2>#Sakshi</h2>
+        <h2 style="color: rgb(127, 239, 168);;">#Sakshi</h2>
         <input type="text" id="result" readonly>
         <div class="buttons">
             <button onclick="appendnumber('7')">7</button>
