feat:virtual keyboard complete

--- a/Session15/task2/index.html
+++ b/Session15/task2/index.html
@@ -9,17 +9,48 @@
 </head>
 
 <body>
-    <div class="keyboard" id="container">
-        <h3 id="charKey"></h3><br>
+    <div class="container">
 
-        <div class="key">Q</div>
-        <div class="key">W</div>
-        <div class="key">E</div>
-        <!---Add your Keys Here-->
+        <div class="result">
+            <p id="charKey"></p>
+        </div>
 
+        <div class="keyboard">
+            <button class="key">Q</button>
+            <button class="key">W</button>
+            <button class="key">E</button>
+            <button class="key">R</button>
+            <button class="key">T</button>
+            <button class="key">Y</button>
+            <button class="key">U</button>
+            <button class="key">I</button>
+            <button class="key">O</button>
+            <button class="key">P</button>
+            <button class="key">A</button>
+            <button class="key">S</button>
+            <button class="key">D</button>
+            <button class="key">F</button>
+            <button class="key">G</button>
+            <button class="key">H</button>
+            <button class="key">J</button>
+            <button class="key">K</button>
+            <button class="key">L</button>
+            <button class="key">;</button>
+            <button class="key">Z</button>
+            <button class="key">X</button>
+            <button class="key">C</button>
+            <button class="key">V</button>
+            <button class="key">B</button>
+            <button class="key">N</button>
+            <button class="key">M</button>
+            <button class="key">,</button>
+            <button class="key">.</button>
+            <button class="key">/</button>
 
-        <div class="key">Z</div>
+        </div>
+
     </div>
+
     <script src="script.js"></script>
 </body>
 
