feat:virtual keyboard keys adde

--- a/Session15/Virtual_Keyboard/index.html
+++ b/Session15/Virtual_Keyboard/index.html
@@ -16,6 +16,22 @@
         </div>
 
         <div class="keyboard">
+            <button class="key">`</button>
+            <button class="key">1</button>
+            <button class="key">2</button>
+            <button class="key">3</button>
+            <button class="key">4</button>
+            <button class="key">5</button>
+            <button class="key">6</button>
+            <button class="key">7</button>
+            <button class="key">8</button>
+            <button class="key">9</button>
+            <button class="key">0</button>
+            <button class="key">-</button>
+            <button class="key">=</button>
+            <button class="key">🔙</button>
+
+            <button class="key">tab</button>
             <button class="key">Q</button>
             <button class="key">W</button>
             <button class="key">E</button>
@@ -26,6 +42,11 @@
             <button class="key">I</button>
             <button class="key">O</button>
             <button class="key">P</button>
+            <button class="key">[</button>
+            <button class="key">]</button>
+            <button class="key">\</button>
+
+            <button class="key">caps lock</button>
             <button class="key">A</button>
             <button class="key">S</button>
             <button class="key">D</button>
@@ -36,6 +57,12 @@
             <button class="key">K</button>
             <button class="key">L</button>
             <button class="key">;</button>
+            <button class="key">'</button>
+            <button class="key">↲</button>
+            <button class="key"></button>
+
+
+            <button class="key">shift</button>
             <button class="key">Z</button>
             <button class="key">X</button>
             <button class="key">C</button>
@@ -46,6 +73,11 @@
             <button class="key">,</button>
             <button class="key">.</button>
             <button class="key">/</button>
+            <button class="key">pau</button>
+            <button class="key"></button>
+            <button class="key">shift</button>
+
+
 
         </div>
 
