feat:clear btn added

--- a/Session15/Virtual_Keyboard/index.html
+++ b/Session15/Virtual_Keyboard/index.html
@@ -80,9 +80,11 @@
 
 
         </div>
-
     </div>
 
+    <div class="clearBtn">
+        <button type="button" onclick="clearkey()" id="btn">Clear</button>
+    </div>
     <script src="script.js"></script>
 </body>
 
