Session 16: js page

--- a/Session16/formValidation/index.html
+++ b/Session16/formValidation/index.html
@@ -18,7 +18,7 @@
             <!--Success Message-->
             <span class="success" id="usernameSuccess"></span>
 
-            <label for="phone">Mobile Number:</label>
+            <label for="phoneNo">Mobile Number:</label>
             <input type="text" id="phoneNo" name="phoneNo" required>
             <!--Phone Number Error Message-->
             <span class="error" id="phoneNoError"></span>
