Session 16: js page

--- a/Session16/formValidation/index.html
+++ b/Session16/formValidation/index.html
@@ -19,7 +19,7 @@
             <span class="success" id="usernameSuccess"></span>
 
             <label for="phoneNo">Mobile Number:</label>
-            <input type="text" id="phoneNo" name="phoneNo" required>
+            <input type="number" id="phoneNo" name="phoneNo" required>
             <!--Phone Number Error Message-->
             <span class="error" id="phoneNoError"></span>
             <!--Success Message-->
