feat: Session18_mapMethod_ex2

--- a/Session18/mapMethod.html
+++ b/Session18/mapMethod.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Map Method</title>
-</head>
-<body>
-    <h1>Map Method</h1>
-    <script>
-        let array = [4,5,7,8,2,4,3]
-        document.write("Original Array is "+ array,"<br> <br>")
 
-        const newArray = array.map((value)=>value+10)
-        document.write("New Array is "+ newArray,"<br> <br>")
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Map Method</title>
+    </head>
 
-        newArray.forEach((value,index)=>{
-            document.write(`<br> ${index} value is ${value} <br>`)
+    <body>
+        <h1>Map Method</h1>
+        <script>
+        let array = [4, 5, 7, 8, 2, 4, 3]
+        document.write("Original Array is " + array, "<br> <br>")
+
+        const newArray = array.map((value) => value + 10)
+        document.write("New Array is " + newArray, "<br> <br>")
+
+        newArray.forEach((value, index) => {
+            document.write(`${index} value is ${value} <br> <br>`)
         })
+
+        let name = "Sakshi Rahangdale"
+        let array1 = name.split("");
+        document.write(`Array is ${array1} <br>`)
+        const output = array1.map((value) => value.charCodeAt(0))
+        document.write(`Output is  ${output} <br>`)
+
+        const newName = name.map((value) => value)
     </script>
-</body>
+    </body>
+
 </html>
