--- a/Session18/filterMethod.html
+++ b/Session18/filterMethod.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Methods</title>
+    <title>Filter Methods</title>
 </head>
 <body>
     <h1>Filter, Find, FindIndex Methods</h1>
