feat: Session19-binary searching

--- a/Session19/linearSearch.html
+++ b/Session19/linearSearch.html
@@ -14,7 +14,7 @@
         const array = [2, 4, 56, 34, 87, 20, 25, 30, 94]
         let found = false;
 
-        let temp = prompt('Enter your searching number')
+        let temp = prompt('Enter searching number')
         for (let i = 0; i < array.length; i++) {
             if (array[i] == temp) {
                 document.write(`${temp} is Found at Index ${i}`)
@@ -26,7 +26,7 @@
         }
         document.write(`<br/><br/> <br/>`)
 
-        
+
         const students = [
             { id: 1, name: "Sakshi" },
             { id: 2, name: "Mukesh" },
@@ -37,7 +37,7 @@
         ]
         let found1 = false;
 
-        let temp1 = prompt('Enter your searching name')
+        let temp1 = prompt('Enter searching name')
         for (let i = 0; i < students.length; i++) {
             if (students[i].name == temp1) {
                 document.write(`${temp1} is Found, Id is ${students[i].id}`)
