--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project-1</title>
-</head>
-<body>
-    <h1>Searching Number in Array with Binary search</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
+        <title>Project-1</title>
+    </head>
+    <body>
+        <h1>🔍 Searching Number in Array with Binary search 🔢</h1>
+
+        <div class="container">
+            <h2><u>Binary Search Program</u></h2>
+            <p>Enter a sorted list of numbers(comma-separated)</p>
+            <input type="text" value="11,14,16,21,27,29,34,36,39,41,45,47,50,55,62">
+            <p>Enter a number to search for</p>
+            <input type="number" id="inputNo" placeholder="Enter your Number" />
+           <div class="btn">
+            <button onclick="searchNum()" id="btnItem">Search</button>
+           </div>
+            <h3 id="foundNum"></h3>
+        </div>
+        <script src="./script.js"></script>
+    </body>
 </html>
