feat: Project-1 output img added

--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -7,7 +7,7 @@
         <title>Project-1</title>
     </head>
     <body>
-        <h1>🔍 Searching Number in Array with Binary search 🔢</h1>
+        <h1>Searching Number in Array with Binary search</h1>
 
         <div class="container">
             <h2><u>Binary Search Program</u></h2>
@@ -18,7 +18,7 @@
            <div class="btn">
             <button onclick="searchNum()" id="btnItem">Search</button>
            </div>
-            <h3 id="foundNum"></h3>
+            <p id="foundNum"></p>
         </div>
         <script src="./script.js"></script>
     </body>
