session23-exeption handling- throw

--- a/Session23/throwKeyword.html
+++ b/Session23/throwKeyword.html
@@ -30,6 +30,6 @@
         check(data);
         
     } catch (error) {
-        console.log("There is some error Occured due to: ",error)
+        console.log("There is some error occured due to: ",error)
     }
     
