--- a/Session24/index.html
+++ b/Session24/index.html
@@ -14,6 +14,8 @@
          color: wheat;
          font-size: 23px;
          padding: 20px;
+         margin-left: auto;
+         margin-right: auto;
         }
         .fruitsImg{
             width: 250px;
