--- a/Session24/API.usingAjex.html
+++ b/Session24/API.usingAjex.html
@@ -13,6 +13,14 @@
         
         table{
             background-color: wheat;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 10px;
+            text-align: center;
+        }
+        h1{
+            text-align: center;
+
         }
     </style>
 </head>
