--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Project-2</h1>
    <div class="container">
-    <h2>ToDo App</h2>
+    <h2>ToDo App📝</h2>
     <div class="inputs">
         <input type="text" placeholder="Enter Your Task" id="inp">
         <button onclick="Add()">Add</button>
