feat: Session-26-defer-Mode of script

--- a/Session26/asyncMode.html
+++ b/Session26/asyncMode.html
@@ -8,6 +8,9 @@
 <body>
 
     <p>......Content Before Script......</p>
+    <img style="width: 230px;"
+    src="https://cdn.pwskills.com/assets/uploads/banners/63a18cca807628f5968f528a/web.jpg"
+    alt>
 
     <script>
         document.addEventListener('DOMContentLoaded',()=>{
