--- a/Node/Session28/myfiles.html
+++ b/Node/Session28/myfiles.html
@@ -66,7 +66,8 @@
                     document.getElementById("search").innerHTML="User Not Found";
                 }
                 else{
-                    document.getElementById("search").innerHTML=resp.id+" "+resp.name+" "+resp.email+" "+resp.phone;
+                    document.getElementById("search").innerHTML=
+                    `Name: ${resp.id} ${resp.name} </br> Email: ${resp.email} </br> Mobile No.: ${resp.phone}`;
                 }
             })
             .catch((err)=>console.log(err));
