feat: session 28 myfiles.html file css added

--- a/Node/Session28/myfiles.html
+++ b/Node/Session28/myfiles.html
@@ -6,7 +6,7 @@
         <title>Document</title>
     </head>
     <body style="background-color: rgb(188, 140, 234);">
-        <div style="text-align: center;">
+        <div style="text-align: center; background-color: rgb(251, 251, 251); color: black; padding: 10px; width: 500px; margin: auto; border-radius: 10px; font-size: 20px;">
             <h2>Users Information:</h2>
             <input type="text" id="uid" placeholder="Enter Id"><br><br>
             <input type="text" id="name" placeholder="Enter Name"><br><br>
@@ -17,7 +17,7 @@
             <h2>Search by Id:</h2>
             <input type="text" name="id" id="id" placeholder="enter id to search">
             <input type="submit" value="Find" onclick="search()">
-            <h2 id="search"></h2>
+            <h2 id="search" style="font-size: 18px;"></h2>
         </div>
 
        
@@ -67,7 +67,7 @@
                 }
                 else{
                     document.getElementById("search").innerHTML=
-                    `Name: ${resp.id} ${resp.name} </br> Email: ${resp.email} </br> Mobile No.: ${resp.phone}`;
+                    `Name: ${resp.id} ${resp.name} </br> Email: ${resp.email} </br> Mobile No: ${resp.phone}`;
                 }
             })
             .catch((err)=>console.log(err));
