--- a/Html_Css_Js/Session4/soundGallary.html
+++ b/Html_Css_Js/Session4/soundGallary.html
@@ -69,19 +69,19 @@
 
     <div class="audio-container" >
         <audio controls autoplay muted loop>
-            <source src="./Sounds/09. Ram Bhajan Kar Man.mp3">
+            <source src="./Sounds/1.mp3">
         </audio>
 
         <audio controls autoplay muted loop>
-            <source src="./Sounds/Chhoti Chhoti Gaiyaa.mp3">
+            <source src="./Sounds/2.mp3">
         </audio>
 
         <audio controls autoplay muted loop>
-            <source src="./Sounds/Main Balak Tu Mata - Jubin Nautiyal.mp3">
+            <source src="./Sounds/3.mp3">
         </audio>
 
         <audio controls autoplay muted loop>
-            <source src="./Sounds/Shiv Sama Rahe - Hansraj Raghuwanshi.mp3">
+            <source src="./Sounds/4.mp3">
         </audio>
     </div>
     <br>
@@ -228,12 +228,10 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </span>
+
     </div><br><br><br>
     <hr> <br><br>
 
-    <video controls muted loop autoplay width="1200px" style="padding-left: 70px;">
-        <source src="./Sounds/sample-5s.mp4">
-    </video>
 
     <footer style="background-color: rgb(44, 65, 65); color: white; text-align: center;" id="footer">
         <H2> Contact Us</H2>
